Remove Hard Links to videoplayer html

--- a/HTML5_BuildingBlocks/template_Ep27_VideoPlayer.html
+++ b/HTML5_BuildingBlocks/template_Ep27_VideoPlayer.html
@@ -5,7 +5,7 @@
 	</head>
 	<body style="background-color:#8ee5ee;">
 		<div id="big_wrapper">
-			<video src="C:\Broadcasts\test.mp4" width="640px" height="360px" poster="./happy.png" 
+			<video src="\test.mp4" width="640px" height="360px" poster="./happy.png" 
 			autoplay loop controls></video>
 		</div>
 	</body>
