--- a/HTML5_BuildingBlocks/template_Ep34_CustomVideoPlayer.html
+++ b/HTML5_BuildingBlocks/template_Ep34_CustomVideoPlayer.html
@@ -7,7 +7,7 @@
 	<body>
 		<section id="skin">
 			<video id="myMovie" width="640" height="360">
-				<source src="C:\BroadCasts\Test.mp4"> 
+				<source src="\Test.mp4"> 
 			</video>
 			<nav>
 				<div id="buttons">
