--- a/Ember.js/EmberStarter/index.html
+++ b/Ember.js/EmberStarter/index.html
@@ -14,7 +14,7 @@
         <!-- Replacing input with an ember/handlebars controller to add new tasks
 		<input type="text" id="new-todo" value="What needs to be done?" />
 		-->
-		{{input type="text" id="new-todo" placeholder="What needs to be done?" value=newTitle action="createTodo"}}
+		{{input type="text" id="new-todo" placeholder="What needs to be done? Write here ..." value=newTitle action="createTodo"}}
 	  </header>
 
       <section id="main">
@@ -33,14 +33,19 @@
             <label>Profit!</label><button class="destroy"></button>
           </li>-->
 		  <!-- Using handlebars to grab each todo in the todo fixtures array -->
-          {{#each}}
+          {{#each itemController="todo"}}
 			<!-- If todo isCompleted true, then add the completed class css -->
-			<li {{bind-attr class="isCompleted:completed"}}>
+			<li {{bind-attr class="isCompleted:completed isEditing:editing"}}>
+			  {{#if isEditing}}
+				{{edit-todo class="edit" value=title focus-out="acceptChanges" 
+												insert-newline="acceptChanges"}}
+			  {{else}}
 			  <!-- Updating the checkbox to place the isCompleted class on items when checked
 			  <input type="checkbox" class="toggle">
 			  -->
 			  {{input type="checkbox" checked=isCompleted class="toggle"}}
-			  <label>{{title}}</label><button class="destroy"></button>
+			  <label {{action "editTodo" on="doubleClick"}}>{{title}}</label><button {{action "removeTodo"}} class="destroy"></button>
+			  {{/if}}
 			</li>
 		  {{/each}}
 		</ul>
@@ -50,7 +55,10 @@
 
       <footer id="footer">
         <span id="todo-count">
-          <strong>2</strong> todos left
+          <!-- Removing static todo count with handlebar controller
+		  <strong>2</strong> todos left
+		  -->
+		  <strong>{{remaining}}</strong> {{inflection}} left
         </span>
         <ul id="filters">
           <li>
@@ -88,6 +96,7 @@
   <script src="js/router.js"></script>
   <script src="js/models/todo.js"></script>
   <script src="js/controllers/todos_controller.js"></script>
+  <script src="js/views/edit_todo_view.js"></script>
   </body>
 </html>
 
